--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-Sid's academic website.
-
-Information will be added as needed.
-
-In the mean time see https://www.linkedin.com/in/sidhartha-agrawal/
+<p>Sid's academic website.</p>
+<p>Information will be added as needed. In the meantime find me on <a href="https://www.linkedin.com/in/sidhartha-agrawal/">LinkedIn.</a></p>
+<p>Contact: siagraw[at]cs[dot]ubc[dot]ca</p>
